Camera image resize and orientation fix

--- a/example/src/pages/camera/camera.html
+++ b/example/src/pages/camera/camera.html
@@ -18,4 +18,5 @@
   <button (click)="takePicture()" ion-button color="primary">Prompt</button>
   <button (click)="takePictureScaled()" ion-button color="primary">Scaled</button>
   <button (click)="takePictureCorrected()" ion-button color="primary">Orientation Corrected</button>
+  <button (click)="takePictureFile()" ion-button color="primary">File URI</button>
 </ion-content>
