--- a/site/src/assets/docs-content/apis/filesystem/api-index.html
+++ b/site/src/assets/docs-content/apis/filesystem/api-index.html
@@ -1,6 +1,8 @@
 <div class="avc-code-plugin-index">
 <div class="avc-code-method-name"><anchor-link to="method-appendFile-0">appendFile()</anchor-link></div>
 <div class="avc-code-method-name"><anchor-link to="method-deleteFile-0">deleteFile()</anchor-link></div>
+<div class="avc-code-method-name"><anchor-link to="method-moveFile-0">moveFile()</anchor-link></div>
+<div class="avc-code-method-name"><anchor-link to="method-copyFile-0">copyFile()</anchor-link></div>
 <div class="avc-code-method-name"><anchor-link to="method-getUri-0">getUri()</anchor-link></div>
 <div class="avc-code-method-name"><anchor-link to="method-mkdir-0">mkdir()</anchor-link></div>
 <div class="avc-code-method-name"><anchor-link to="method-readFile-0">readFile()</anchor-link></div>
